After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658864 - [Patch] fix dconf_shmdir_from_environment
[Patch] fix dconf_shmdir_from_environment
Status: RESOLVED FIXED
Product: dconf
Classification: Core
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: dconf-maint
dconf-maint
Depends on:
Blocks:
 
 
Reported: 2011-09-12 21:53 UTC by Marc-Antoine Perennou
Modified: 2011-09-12 22:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix dconf_shmdir_from_environment (879 bytes, patch)
2011-09-12 21:53 UTC, Marc-Antoine Perennou
none Details | Review

Description Marc-Antoine Perennou 2011-09-12 21:53:50 UTC
Created attachment 196315 [details] [review]
fix dconf_shmdir_from_environment

g_mkdir_with_parent returns 0 on success.
Probably a typso but testing (!g_mkdir_with_parent(...) != 0) for an error is the opposite of what we want.
Comment 1 Allison Karlitskaya (desrt) 2011-09-12 22:33:39 UTC
Double negative strikes again!

thanks for the fix :)